[gd_scene load_steps=43 format=2]

[ext_resource path="res://Sprites/Characters/charge_dive.png" type="Texture" id=1]
[ext_resource path="res://player_physics_v3.gd" type="Script" id=2]
[ext_resource path="res://character data/Harvey_Spriteframes.tres" type="SpriteFrames" id=3]
[ext_resource path="res://Sprites/Characters/charge_blast.png" type="Texture" id=4]
[ext_resource path="res://character data/Ultra.tres" type="Resource" id=5]
[ext_resource path="res://character data/Harvey_Acc-curve.tres" type="Curve" id=6]
[ext_resource path="res://Sprites/Other/homing_reticle.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Characters/particle_smoke.png" type="Texture" id=8]
[ext_resource path="res://Player_Anim.gd" type="Script" id=9]
[ext_resource path="res://PlayerAnimator.gd" type="Script" id=10]
[ext_resource path="res://Sprites/Characters/charge_dropdash.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Characters/charge_ball.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Characters/Charge_spinA.png" type="Texture" id=13]
[ext_resource path="res://player-health.gd" type="Script" id=14]
[ext_resource path="res://Sprites/Characters/charge_dropdash2.png" type="Texture" id=15]
[ext_resource path="res://dropdash_spin.tres" type="Animation" id=16]
[ext_resource path="res://Level Objects/Interactables/Bouncing_Ring.tscn" type="PackedScene" id=17]

[sub_resource type="PhysicsMaterial" id=6]
friction = 0.0
bounce = 0.1

[sub_resource type="CircleShape2D" id=5]
radius = 11.0

[sub_resource type="RectangleShape2D" id=41]
extents = Vector2( 15, 26.5 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 15, 15 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 15, 0, 15, 15 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "Charge",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 21, 21 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 12 )
region = Rect2( 21, 0, 21, 21 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 12 )
region = Rect2( 42, 0, 21, 21 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 12 )
region = Rect2( 63, 0, 21, 21 )

[sub_resource type="SpriteFrames" id=32]
animations = [ {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 13 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 21, 21 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 11 )
region = Rect2( 21, 0, 21, 21 )

[sub_resource type="SpriteFrames" id=37]
animations = [ {
"frames": [ SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "New Anim",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "New Anim 1",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=40]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.75, 0.25 ) ]
}

[sub_resource type="Shader" id=42]
code = "shader_type canvas_item;

uniform bool flash = false;
uniform bool replacecolor = false;
uniform vec4 flashcolor: hint_color = vec4(1,1,1,1);

void fragment() {
	if (flash && texture(TEXTURE,UV).w > 0.0){
		  COLOR = flashcolor;
	}
	else{
		COLOR = texture(TEXTURE,UV);
	}

}"

[sub_resource type="ShaderMaterial" id=43]
shader = SubResource( 42 )
shader_param/flash = false
shader_param/replacecolor = false
shader_param/flashcolor = Color( 1, 1, 1, 1 )

[sub_resource type="Gradient" id=23]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=24]
gradient = SubResource( 23 )

[sub_resource type="Curve" id=25]
max_value = 4.0
_data = [ Vector2( 0, 0.745455 ), 0.0, 0.0, 0, 0, Vector2( 1, 3.45909 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=26]
curve = SubResource( 25 )

[sub_resource type="ParticlesMaterial" id=22]
emission_shape = 2
emission_box_extents = Vector3( 4, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, -30, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
scale_curve = SubResource( 26 )
color_ramp = SubResource( 24 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Player_RigidBody" type="RigidBody2D"]
collision_layer = 2
collision_mask = 5
mode = 2
physics_material_override = SubResource( 6 )
gravity_scale = 2.0
continuous_cd = 2
can_sleep = false
linear_damp = 0.0
script = ExtResource( 2 )
char_data = ExtResource( 5 )
move_wallstick = false
move_machclimb = false
move_dash = false
Horizontal_Acceleration = ExtResource( 6 )
speed_limit = 1500
mach_speed = 500
max_attach_angle = 70
mach_turn_speedlimit = 600
normal_gravity = 1.3
fall_gravity = 2.0
ball_gravitydownslope = 3.0
dropdash_charge_time = 1.5
spindash_force = 25000.0
drag_force = 0
debug = false
floatdist = 20.0
reticletexture = ExtResource( 7 )

[node name="Ball_collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -23 )
shape = SubResource( 5 )

[node name="Rays" type="Node2D" parent="."]
position = Vector2( 0, -13 )

[node name="CeilingRayL" type="RayCast2D" parent="Rays"]
position = Vector2( -12, -13 )
enabled = true
cast_to = Vector2( 0, -10 )

[node name="CeilingRayR" type="RayCast2D" parent="Rays"]
position = Vector2( 12, -13 )
enabled = true
cast_to = Vector2( 0, -10 )

[node name="LeftRay1" type="RayCast2D" parent="Rays"]
position = Vector2( -1, -8 )
enabled = true
cast_to = Vector2( -20, 0 )

[node name="RightRay2" type="RayCast2D" parent="Rays"]
position = Vector2( 1, -8 )
enabled = true
cast_to = Vector2( 20, 0 )

[node name="GroundRayL" type="RayCast2D" parent="Rays"]
position = Vector2( -7, -10 )
enabled = true

[node name="GroundRayR" type="RayCast2D" parent="Rays"]
position = Vector2( 7, -10 )
enabled = true

[node name="GroundRayM" type="RayCast2D" parent="Rays"]
position = Vector2( 0, -10 )
enabled = true
cast_to = Vector2( 0, 28 )

[node name="Hitbox" type="Area2D" parent="Rays"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rays/Hitbox"]
position = Vector2( 0, -10.5 )
shape = SubResource( 41 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 112.0
margin_top = -208.0
margin_right = 379.0
margin_bottom = -88.0
color = Color( 0.0156863, 0.0313726, 0.0392157, 1 )

[node name="Debugtext_rect" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = -200.0
margin_right = 400.0
margin_bottom = -157.0

[node name="Debugtext" type="RichTextLabel" parent="Debugtext_rect"]
margin_right = 280.0
margin_bottom = 15.0
text = "SX: 100 Sy: 100"
fit_content_height = true

[node name="Animator" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="MachParent" type="Node2D" parent="Animator"]
position = Vector2( 0, -23 )

[node name="Mach" type="AnimatedSprite" parent="Animator/MachParent"]
position = Vector2( 4, 1 )
scale = Vector2( 4, 4 )
frames = SubResource( 21 )
animation = "Charge"
playing = true

[node name="Rotator" type="Node2D" parent="Animator"]
position = Vector2( 0, -19 )
scale = Vector2( 4, 4 )
script = ExtResource( 9 )

[node name="Ball_glow" type="AnimatedSprite" parent="Animator/Rotator"]
visible = false
position = Vector2( -11, -9.75 )
frames = SubResource( 32 )
frame = 3
playing = true
centered = false

[node name="Glow_dropdash" type="AnimatedSprite" parent="Animator/Rotator"]
position = Vector2( -0.75, 0.25 )
frames = SubResource( 37 )
animation = "New Anim 1"
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animator/Rotator/Glow_dropdash"]
autoplay = "dropdash_spin"
playback_process_mode = 0
method_call_mode = 1
anims/RESET = SubResource( 40 )
anims/dropdash_spin = ExtResource( 16 )

[node name="MainSprite" type="AnimatedSprite" parent="Animator/Rotator"]
material = SubResource( 43 )
position = Vector2( 0, -3.75 )
frames = ExtResource( 3 )
animation = "Walk"
playing = true

[node name="Particles2D" type="Particles2D" parent="Animator/Rotator"]
visible = false
position = Vector2( 0, 4.75 )
amount = 20
local_coords = false
process_material = SubResource( 22 )
texture = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Animator/Rotator"]
visible = false
position = Vector2( -0.5, -3.25 )
frames = SubResource( 27 )

[node name="CameraParent" type="Node2D" parent="Animator"]
position = Vector2( 0, -128 )

[node name="Camera2D" type="Camera2D" parent="Animator/CameraParent"]
position = Vector2( -1, -1 )
current = true
zoom = Vector2( 1.6, 1.6 )
smoothing_enabled = true
smoothing_speed = 10.0

[node name="Flasher" type="Timer" parent="Animator"]
wait_time = 0.3
autostart = true

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource( 14 )
ringprefab = ExtResource( 17 )
hurtforce = 300.0

[node name="Timer" type="Timer" parent="HealthComponent"]
wait_time = 0.5
autostart = true

[node name="InvincibilityTimer" type="Timer" parent="HealthComponent"]
wait_time = 1.5
one_shot = true

[connection signal="area_entered" from="Rays/Hitbox" to="HealthComponent" method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Rays/Hitbox" to="HealthComponent" method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Animator/Flasher" to="Animator" method="_on_Flasher_timeout"]
[connection signal="timeout" from="HealthComponent/Timer" to="HealthComponent" method="_on_Timer_timeout"]
[connection signal="timeout" from="HealthComponent/InvincibilityTimer" to="HealthComponent" method="_on_InvincibilityTimer_timeout"]
